# manusdelto

./: .gitignore  README.md
src/core/manus_tesollo/: package.xml  setup.cfg  setup.py
src/core/manus_tesollo/manus_tesollo/: dg5f_kinematics.py  manus_tesollo_node.py
src/core/manus_tesollo/manus_tesollo/retargeters/: __init__.py  base.py  dex.py  ergo.py  heuristic.py  ik.py  mano_transform.py  smoothing.py
src/core/manus_tesollo/manus_tesollo/retargeters/configs/: dg5f_left_dexpilot.yml  dg5f_left_vector.yml  dg5f_right_dexpilot.yml  dg5f_right_vector.yml
src/core/manus_tesollo/urdf/: dg5f_left_retarget.urdf
src/gui/manusdelto_gui/: package.xml  setup.cfg  setup.py
src/gui/manusdelto_gui/manusdelto_gui/: manusdelto_gui_node.py
src/hand/delto_hardware/: CMakeLists.txt
src/hand/delto_hardware/include/delto_hardware/: delto_gripper_helper.hpp  system_interface.hpp
src/hand/delto_hardware/src/: system_interface.cpp
src/hand/dg5f_driver/: CMakeLists.txt
src/hand/dg5f_driver/src/: dg5f_operator_driver.cpp
src/input/manus_ros2/: .gitignore  CMakeLists.txt  DEVELOPER.ko.md  package.xml
src/input/manus_ros2/client_scripts/: manus_data_viz.py
src/input/manus_ros2/config/: gloves.yaml
src/input/manus_ros2/src/: ManusDataPublisher.cpp  ManusDataPublisher.hpp  manus_data_publisher.cpp
src/launch/manusdelto_bringup/: package.xml  setup.cfg  setup.py
src/launch/manusdelto_bringup/launch/: manusdelto.launch.py
src/msgs/manus_ros2_msgs/: CMakeLists.txt  DEVELOPER.ko.md  package.xml
src/msgs/manus_ros2_msgs/msg/: ManusGlove.msg  ManusRawNode.msg
(+1 files in other folders)
