<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>manus_tesollo</name>
  <version>0.1.0</version>
  <description>Manus glove to Tesollo DG5F-M retargeting node (remote PC side)</description>
  <maintainer email="jaehyun.yi@samsung.com">Jaehyun Yi</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>manus_ros2_msgs</depend>
  <depend>control_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
