<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>manusdelto_bringup</name>
  <version>0.0.1</version>
  <description>Launch file for the Manus glove + DG5F hand standalone test rig (no RBY1)</description>
  <maintainer email="jaehyun.yi@samsung.com">J. Yi</maintainer>
  <license>MIT</license>

  <exec_depend>manus_ros2</exec_depend>
  <exec_depend>manus_tesollo</exec_depend>
  <exec_depend>dg5f_driver</exec_depend>
  <exec_depend>manusdelto_gui</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
